--- a/app/src/main/res/layout/combat_fragment.xml
+++ b/app/src/main/res/layout/combat_fragment.xml
@@ -6,6 +6,87 @@
     android:layout_height="match_parent"
     android:background="@color/fantasy_fitness_gray">
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/detailed_card"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="50dp"
+        android:layout_marginVertical="125dp"
+        app:cardBackgroundColor="@color/fantasy_fitness_white"
+        app:cardElevation="8dp"
+        app:cardMaxElevation="10dp"
+        app:cardPreventCornerOverlap="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:id="@+id/detailed_card_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="asdfds"
+                android:textSize="25sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/detailedcard_health"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="asdfds"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/detailed_card_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:textSize="12sp"
+                app:layout_constraintTop_toBottomOf="@+id/detailed_card_name"
+                tools:layout_editor_absoluteX="1dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/detailed_ability_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="93dp"
+                android:minHeight="50dp"
+                app:layout_constraintTop_toBottomOf="@+id/detailed_card_description"
+                tools:layout_editor_absoluteX="1dp" />
+
+            <Button
+                android:id="@+id/close_detailed_card_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginBottom="25dp"
+                android:layout_gravity="center"
+                android:autoSizeTextType="uniform"
+                android:backgroundTint="@color/fantasy_fitness_green"
+                android:text="@string/close"
+                android:textColor="@color/fantasy_fitness_white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/enemyHand"
         android:layout_width="0dp"
