--- a/app/src/main/res/layout/combat_fragment.xml
+++ b/app/src/main/res/layout/combat_fragment.xml
@@ -21,7 +21,8 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5">
+        app:layout_constraintVertical_bias="0.5"
+        android:visibility="gone">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -142,7 +143,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/enemyHand"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="85dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
@@ -151,85 +152,117 @@
         app:layout_constrainedHeight="true"
         app:layout_constraintBottom_toTopOf="@+id/enemyBackLine"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/enemyBackLine"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="85dp"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="5dp"
         android:background="@color/fantasy_fitness_white"
         app:layout_constrainedHeight="true"
         app:layout_constraintBottom_toTopOf="@+id/enemyFrontLine"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/enemyHand" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/enemyFrontLine"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="85dp"
         android:layout_marginStart="10dp"
-        android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="5dp"
         android:background="@color/fantasy_fitness_white"
         app:layout_constrainedHeight="true"
-        app:layout_constraintBottom_toTopOf="@+id/end_turn_button"
+        app:layout_constraintBottom_toTopOf="@+id/spacer"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias=".5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/enemyBackLine" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/spacer"
+        android:layout_width="0dp"
+        android:layout_height="10dp"
+        android:layout_marginHorizontal="50dp"
+        android:layout_marginVertical="10dp"
+        app:cardBackgroundColor="@color/fantasy_fitness_white"
+        app:cardPreventCornerOverlap="true"
+        app:layout_constraintBottom_toTopOf="@+id/end_turn_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/enemyFrontLine"
+        app:layout_constraintVertical_bias="0.5"
+        android:visibility="invisible"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/spacer2"
+        android:layout_width="0dp"
+        android:layout_height="10dp"
+
+        android:layout_marginTop="10dp"
+        android:visibility="invisible"
+        app:cardBackgroundColor="@color/fantasy_fitness_white"
+        app:cardPreventCornerOverlap="true"
+        app:layout_constraintBottom_toTopOf="@+id/playerFrontLine"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/end_turn_button"
+        app:layout_constraintVertical_bias="0.5" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playerFrontLine"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="85dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/fantasy_fitness_white"
         app:layout_constrainedHeight="true"
         app:layout_constraintBottom_toTopOf="@+id/playerBackLine"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/end_turn_button" />
+        app:layout_constraintTop_toBottomOf="@+id/spacer2" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playerBackLine"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="85dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="10dp"
         android:background="@color/fantasy_fitness_white"
         app:layout_constrainedHeight="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/playerFrontLine" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playerHand"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="85dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="5dp"
         android:background="@color/fantasy_fitness_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playerBackLine" />
+        app:layout_constraintTop_toBottomOf="@+id/playerBackLine"
+        app:layout_constraintVertical_bias="0.048" />
 
     <Button
         android:id="@+id/end_turn_button"
