--- a/app/src/main/res/layout/combat_fragment.xml
+++ b/app/src/main/res/layout/combat_fragment.xml
@@ -96,8 +96,8 @@
         android:layout_marginHorizontal="50dp"
         android:layout_marginVertical="125dp"
         android:visibility="gone"
-        app:cardBackgroundColor="@color/fantasy_fitness_white"
-        app:cardElevation="8dp"
+        app:cardBackgroundColor="@color/fantasy_fitness_gray"
+        app:cardElevation="10dp"
         app:cardMaxElevation="10dp"
         app:cardPreventCornerOverlap="true"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -105,7 +105,8 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5">
+        app:layout_constraintVertical_bias="0.5"
+        android:layout_gravity="center">
 
         <LinearLayout
             android:layout_width="match_parent"
